"¿En que consiste?" added

--- a/changed.html
+++ b/changed.html
@@ -15,11 +15,52 @@
 
 <body>
     <div class="container">
-        <h2 class="text-center mb-3 mt-4">En que consiste?</h2>
-        <p class="text-center">El evento consistirá en una competición CTF de tipo jeopardy donde los equipos deberán
-            resolver el máximo número de retos a lo largo del día.
-
+        <h2 class="text-center mb-3 mt-4">¿En que consiste?</h2>
+        <p class="text-center px-5">El evento consistirá en una competición CTF de tipo jeopardy donde
+            los
+            equipos
+            deberán
+            resolver el máximo número de retos a lo largo del día.<br><br>
             Los retos a los que se enfrentarán comprenderán las siguientes categorías:</p>
+        <div class="row">
+            <div class="col-6 col-md-4 col-lg-3  container">
+                <p class="text-center"><img src="images/32087961.png" alt="" style="height: 46px; width: 46px;"><br>
+
+                    FORENSE</p>
+            </div>
+            <div class="col-6 col-md-4 col-lg-3   container">
+                <p class="text-center"><img src="images/1336494.png" alt="" style="height: 46px; width: 46px;"><br>
+
+                    WEB</p>
+            </div>
+            <div class="col-6 col-md-4 col-lg-3  container">
+                <p class="text-center"><img src="images/7873598.png" alt="" style="height: 46px; width: 46px;"><br>
+
+                    CRIPTOGRAFIA</p>
+            </div>
+            <div class=" col-6 col-md-4 col-lg-3  container">
+                <p class="text-center"><img src="images/2329087.png" alt="" style="height: 46px; width: 46px;"><br>
+
+                    OSINT</p>
+            </div>
+            <div class=" col-6 col-md-4 col-lg-3  container">
+                <p class="text-center"><img src="images/3617252.png" alt="" style="height: 46px; width: 46px;"><br>
+
+                    PWN</p>
+            </div>
+            <div class=" col-6 col-md-4 col-lg-3  container">
+                <p class="text-center"><img src="images/784599.png" alt="" style="height: 46px; width: 46px;"><br>
+
+                    REVERSING</p>
+            </div>
+            <div class=" col-6 col-md-4 col-lg-3  container">
+                <p class="text-center"><img src="images/1491174.png" alt="" style="height: 46px; width: 46px;"><br>
+
+                    MISC</p>
+            </div>
+
+
+        </div>
     </div>
 </body>
 
