--- a/changed.html
+++ b/changed.html
@@ -6,17 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CTFUniversitario</title>
+    <link rel="stylesheet" href="main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-    <div class="container">
-        <h2 class="text-center mb-3 mt-4">¿En que consiste?</h2>
-        <p class="text-center px-5">El evento consistirá en una competición CTF de tipo jeopardy donde
+    <section class="container text-center">
+        <h2 class="my-3">¿En que consiste?</h2>
+        <p class="px-5">El evento consistirá en una competición CTF de tipo jeopardy donde
             los
             equipos
             deberán
@@ -61,7 +65,49 @@
 
 
         </div>
-    </div>
+    </section>
+    <section class="container text-center">
+        <h2>Requisitos</h2>
+        <article class="text-center row container">
+
+            <div class="container col-md-6 col-sm-12">
+                <aside class="my-2">
+                    <b class="circle d-inline-block">1</b>
+                    <b class="h2 ms-2">Tener entre 18 y 26 años<i class="ms-3 fa-solid fa-angle-down"></i></b>
+                    <p class="container w-75 d-none">La edad del/de la participante deberá estar comprendida entre los
+                        18 y
+                        26
+                        años,
+                        ambos inclusive, en
+                        el momento de realizar la competición.</p>
+                </aside>
+                <aside class="my-2">
+                    <b class="circle d-inline-block">1</b>
+                    <b class="h2 ms-2">Tener entre 18 y 26 años<i class="ms-3 fa-solid fa-angle-down"></i></b>
+                    <p class="container w-75 d-none">La edad del/de la participante deberá estar comprendida entre los
+                        18 y
+                        26
+                        años,
+                        ambos inclusive, en
+                        el momento de realizar la competición.</p>
+                </aside>
+                <aside class="my-2">
+                    <b class="circle d-inline-block">1</b>
+                    <b class="h2 ms-2">Tener entre 18 y 26 años<i class="ms-3 fa-solid fa-angle-down"></i></b>
+                    <p class="container w-75 d-none">La edad del/de la participante deberá estar comprendida entre los
+                        18 y
+                        26
+                        años,
+                        ambos inclusive, en
+                        el momento de realizar la competición.</p>
+                </aside>
+            </div>
+            <div class="container col-sm-12 col-md-6">
+                <img class="img-fluid" src="images/IMG_20210908_113717.jpg" alt="">
+            </div>
+        </article>
+    </section>
+
 </body>
 
 </html>
