--- a/changed.html
+++ b/changed.html
@@ -15,11 +15,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="//bootstrap-extension.com/bootstrap-extension-5.1.0/css/bootstrap-extension.min.css"
+        type="text/css">
+    <script defer src="//bootstrap-extension.com/bootstrap-extension-5.1.0/js/bootstrap-extension.min.js"></script>
 </head>
 
 <body>
     <section class="container text-center">
-        <h2 class="my-3">¿En que consiste?</h2>
+        <h2 class="my-3 dividered dividered-md-center dividered-danger">¿En que consiste?</h2>
         <p class="px-5">El evento consistirá en una competición CTF de tipo jeopardy donde
             los
             equipos
@@ -66,46 +69,83 @@
 
         </div>
     </section>
-    <section class="container text-center">
-        <h2>Requisitos</h2>
+    <section class="container text-center my-5">
+        <h2 class="my-5 dividered dividered-md-center dividered-danger">Requisitos</h2>
         <article class="text-center row container">
 
             <div class="container col-md-6 col-sm-12">
-                <aside class="my-2">
+                <aside class="my-5">
                     <b class="circle d-inline-block">1</b>
-                    <b class="h2 ms-2">Tener entre 18 y 26 años<i class="ms-3 fa-solid fa-angle-down"></i></b>
-                    <p class="container w-75 d-none">La edad del/de la participante deberá estar comprendida entre los
-                        18 y
-                        26
-                        años,
-                        ambos inclusive, en
-                        el momento de realizar la competición.</p>
+                    <b class="h2 ms-2 ">Tener entre 18 y 26 años
+                        <a class="arrow" data-bs-toggle="collapse" data-bs-target="#collapse1" role="button"
+                            aria-expanded="false" aria-controls="collapse1"
+                            onclick="this.childNodes[1].classList.toggle('rotated')">
+                            <i class="ms-3 fa-solid fa-angle-down arrowicon"></i>
+                        </a>
+                    </b>
+                    <div class="collapse" id="collapse1">
+                        <p class="container w-75 ">La edad del/de la participante deberá estar
+                            comprendida
+                            entre los
+                            18 y
+                            26
+                            años,
+                            ambos inclusive, en
+                            el momento de realizar la competición.
+                        </p>
+                    </div>
                 </aside>
-                <aside class="my-2">
+                <aside class="my-5">
                     <b class="circle d-inline-block">1</b>
-                    <b class="h2 ms-2">Tener entre 18 y 26 años<i class="ms-3 fa-solid fa-angle-down"></i></b>
-                    <p class="container w-75 d-none">La edad del/de la participante deberá estar comprendida entre los
-                        18 y
-                        26
-                        años,
-                        ambos inclusive, en
-                        el momento de realizar la competición.</p>
+                    <b class="h2 ms-2 ">Tener entre 18 y 26 años
+                        <a class="arrow " data-bs-toggle="collapse" data-bs-target="#collapse2" role="button"
+                            aria-expanded="false" aria-controls="collapse2 "
+                            onclick="this.childNodes[1].classList.toggle('rotated')">
+                            <i class="ms-3 fa-solid fa-angle-down arrowicon"></i>
+                        </a>
+                    </b>
+                    <div class="collapse" id="collapse2">
+                        <p class="container w-75 ">La edad del/de la participante deberá estar
+                            comprendida
+                            entre los
+                            18 y
+                            26
+                            años,
+                            ambos inclusive, en
+                            el momento de realizar la competición.
+                        </p>
+                    </div>
                 </aside>
-                <aside class="my-2">
+                <aside class="my-5">
                     <b class="circle d-inline-block">1</b>
-                    <b class="h2 ms-2">Tener entre 18 y 26 años<i class="ms-3 fa-solid fa-angle-down"></i></b>
-                    <p class="container w-75 d-none">La edad del/de la participante deberá estar comprendida entre los
-                        18 y
-                        26
-                        años,
-                        ambos inclusive, en
-                        el momento de realizar la competición.</p>
+                    <b class="h2 ms-2 ">Tener entre 18 y 26 años
+                        <a class="arrow" data-bs-toggle="collapse" data-bs-target="#collapse3" role="button"
+                            aria-expanded="false" aria-controls="collapse3"
+                            onclick="this.childNodes[1].classList.toggle('rotated')">
+                            <i class="ms-3 fa-solid fa-angle-down arrowicon"></i>
+                        </a>
+                    </b>
+                    <div class="collapse" id="collapse3">
+                        <p class="container w-75 ">La edad del/de la participante deberá estar
+                            comprendida
+                            entre los
+                            18 y
+                            26
+                            años,
+                            ambos inclusive, en
+                            el momento de realizar la competición.
+                        </p>
+                    </div>
                 </aside>
             </div>
             <div class="container col-sm-12 col-md-6">
                 <img class="img-fluid" src="images/IMG_20210908_113717.jpg" alt="">
             </div>
         </article>
+    </section>
+    <section class="text-center dividered dividered-md-center dividered-danger patrocinadores">
+        <h2 class="py-5">Patrocinadores</h2>
+        <article><br><br><br><br><br><br><br><br></article>
     </section>
 
 </body>
