collapsibles made easier

--- a/changed.html
+++ b/changed.html
@@ -77,9 +77,8 @@
                 <aside class="my-5">
                     <b class="circle d-inline-block">1</b>
                     <b class="h2 ms-2 ">Tener entre 18 y 26 años
-                        <a class="arrow" data-bs-toggle="collapse" data-bs-target="#collapse1" role="button"
-                            aria-expanded="false" aria-controls="collapse1"
-                            onclick="this.childNodes[1].classList.toggle('rotated')">
+                        <a class="arrow collapsed" data-bs-toggle="collapse" data-bs-target="#collapse1" role="button"
+                            aria-expanded="false" aria-controls="collapse1">
                             <i class="ms-3 fa-solid fa-angle-down arrowicon"></i>
                         </a>
                     </b>
@@ -98,9 +97,8 @@
                 <aside class="my-5">
                     <b class="circle d-inline-block">1</b>
                     <b class="h2 ms-2 ">Tener entre 18 y 26 años
-                        <a class="arrow " data-bs-toggle="collapse" data-bs-target="#collapse2" role="button"
-                            aria-expanded="false" aria-controls="collapse2 "
-                            onclick="this.childNodes[1].classList.toggle('rotated')">
+                        <a class="arrow collapsed" data-bs-toggle="collapse" data-bs-target="#collapse2" role="button"
+                            aria-expanded="false" aria-controls="collapse2 ">
                             <i class="ms-3 fa-solid fa-angle-down arrowicon"></i>
                         </a>
                     </b>
@@ -119,9 +117,8 @@
                 <aside class="my-5">
                     <b class="circle d-inline-block">1</b>
                     <b class="h2 ms-2 ">Tener entre 18 y 26 años
-                        <a class="arrow" data-bs-toggle="collapse" data-bs-target="#collapse3" role="button"
-                            aria-expanded="false" aria-controls="collapse3"
-                            onclick="this.childNodes[1].classList.toggle('rotated')">
+                        <a class="arrow collapsed" data-bs-toggle="collapse" data-bs-target="#collapse3" role="button"
+                            aria-expanded="false" aria-controls="collapse3">
                             <i class="ms-3 fa-solid fa-angle-down arrowicon"></i>
                         </a>
                     </b>
