--- a/changed.html
+++ b/changed.html
@@ -175,6 +175,9 @@
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
                 </div>
             </article>
+            <div class="container w-75">
+                <div class="dotted py-5"></div>
+            </div>
             <h3 class="my-5">PATROCINADORES ORO</h3>
             <article class="text-center row container">
                 <div class="container col-sm-12 col-md-6"><img class="w-75"
@@ -184,6 +187,10 @@
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
                 </div>
             </article>
+            <div class="container w-75">
+                <div class="dotted py-5"></div>
+            </div>
+
             <h3 class="my-5">PATROCINADORES PLATA</h3>
             <article class="text-center row container">
                 <div class="container col-sm-12 col-md-6"><img class="w-75"
