cambios de contenidos desplegables

--- a/changed.html
+++ b/changed.html
@@ -73,11 +73,11 @@
         <h2 class="my-5 dividered dividered-center dividered-danger">Requisitos</h2>
         <article class="text-center row container">
 
-            <div class="container col-md-6 col-sm-12">
+            <div class="container col-md-6 col-sm-12 text-start">
                 <aside class="my-5">
-                    <b class="circle d-inline-block">1</b>
-                    <b class="h2 ms-2 ">Tener entre 18 y 26 años
-                        <a class="arrow collapsed" data-bs-toggle="collapse" data-bs-target="#collapse1" role="button"
+                    <b class="circle d-inline-block text-center">1</b>
+                    <b class="h2 ms-2 ">Tener entre 18 y 26
+                        <a class="arrow collapsed " data-bs-toggle="collapse" data-bs-target="#collapse1" role="button"
                             aria-expanded="false" aria-controls="collapse1">
                             <i class="ms-3 fa-solid fa-angle-down arrowicon"></i>
                         </a>
@@ -95,42 +95,34 @@
                     </div>
                 </aside>
                 <aside class="my-5">
-                    <b class="circle d-inline-block">1</b>
-                    <b class="h2 ms-2 ">Tener entre 18 y 26 años
+
+                    <b class="circle d-inline-block text-center">2</b>
+
+                    <b class="h2 ms-2 text-center">Matriculado en el curso 2022-23
                         <a class="arrow collapsed" data-bs-toggle="collapse" data-bs-target="#collapse2" role="button"
                             aria-expanded="false" aria-controls="collapse2 ">
                             <i class="ms-3 fa-solid fa-angle-down arrowicon"></i>
                         </a>
                     </b>
                     <div class="collapse" id="collapse2">
-                        <p class="container w-75 ">La edad del/de la participante deberá estar
-                            comprendida
-                            entre los
-                            18 y
-                            26
-                            años,
-                            ambos inclusive, en
-                            el momento de realizar la competición.
+                        <p class="container w-75 ">Los estudios deben ser de grado o máster universitario
+                            relacionado
+                            con las tecnologías en cualquiera de las universidades de Madrid. Se solicitará la
+                            documentación oficial acreditativa de la matrícula durante la inscripción.
                         </p>
                     </div>
+
                 </aside>
                 <aside class="my-5">
-                    <b class="circle d-inline-block">1</b>
-                    <b class="h2 ms-2 ">Tener entre 18 y 26 años
+                    <b class="circle d-inline-block text-center">3</b>
+                    <b class="h2 ms-2 text-center">Formar equipos de 3-4 personas
                         <a class="arrow collapsed" data-bs-toggle="collapse" data-bs-target="#collapse3" role="button"
                             aria-expanded="false" aria-controls="collapse3">
                             <i class="ms-3 fa-solid fa-angle-down arrowicon"></i>
                         </a>
                     </b>
                     <div class="collapse" id="collapse3">
-                        <p class="container w-75 ">La edad del/de la participante deberá estar
-                            comprendida
-                            entre los
-                            18 y
-                            26
-                            años,
-                            ambos inclusive, en
-                            el momento de realizar la competición.
+                        <p class="container w-75 ">Mismas universidades? Distintas???
                         </p>
                     </div>
                 </aside>
@@ -163,7 +155,7 @@
         </article>
     </section>
     <div class="patrocinadores">
-        <section class="text-center container patrocinadores mt-5">
+        <section class="text-center container patrocinadores py-5">
             <h2 class="py-5 dividered dividered-center dividered-danger">Patrocinadores</h2>
 
             <h3 class="my-5">PATROCINADORES PLATINO</h3>
@@ -171,7 +163,7 @@
                 <div class="container col-sm-12 col-md-6 "><img class="w-75"
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
                 </div>
-                <div class="container col-sm-12 col-md-6 mt-5"><img class="w-75"
+                <div class="container col-sm-12 col-md-6 mt-sm-5 mt-md-0"><img class="w-75"
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
                 </div>
             </article>
@@ -183,7 +175,7 @@
                 <div class="container col-sm-12 col-md-6"><img class="w-75"
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
                 </div>
-                <div class="container col-sm-12 col-md-6 mt-5"><img class="w-75"
+                <div class="container col-sm-12 col-md-6 mt-sm-5 mt-md-0 "><img class="w-75"
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
                 </div>
             </article>
@@ -192,11 +184,11 @@
             </div>
 
             <h3 class="my-5">PATROCINADORES PLATA</h3>
-            <article class="text-center row container">
+            <article class="text-center row container ">
                 <div class="container col-sm-12 col-md-6"><img class="w-75"
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
                 </div>
-                <div class="container col-sm-12 col-md-6 mt-5"><img class="w-75"
+                <div class="container col-sm-12 col-md-6 mt-sm-5 mt-md-0"><img class="w-75"
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
                 </div>
             </article>
