--- a/changed.html
+++ b/changed.html
@@ -24,8 +24,9 @@
 <body style="padding-top:4.5rem">
     <nav class="navbar navbar-expand-lg bg-danger  fixed-top">
         <div class="container-fluid ">
-            <a class="collapsed menubut p-3 " data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                role="button" aria-expanded="false" aria-controls="navbarSupportedContent">
+            <a class="collapsed menubut p-3 navbar-toggler border-0" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" role="button" aria-expanded="false"
+                aria-controls="navbarSupportedContent">
                 <i class="fa-solid fa-bars fa-lg text-gray"></i>
             </a>
             <!-- <button class="" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
