font added, text updates and navbar update

--- a/changed.html
+++ b/changed.html
@@ -74,13 +74,13 @@
         </div>
     </nav>
     <section class="container text-center p-3">
-        <h2 class="my-3 dividered dividered-center dividered-danger">¿En que consiste?</h2>
+        <h2 class="my-3 dividered dividered-center dividered-danger">¿En qué consiste?</h2>
         <p class="px-5">El evento consistirá en una competición CTF de tipo jeopardy donde
             los
             equipos
             deberán
             resolver el máximo número de retos a lo largo del día.<br><br>
-            Los retos a los que se enfrentarán comprenderán las siguientes categorías:</p>
+            Los retos a los que se enfrentarán podrían comprender las siguientes categorías:</p>
         <div class="row">
             <div class="col-6 col-md-4 col-lg-3  container">
                 <p class="text-center"><img src="images/32087961.png" alt="" style="height: 46px; width: 46px;"><br>
@@ -177,7 +177,9 @@
                         </a>
                     </b>
                     <div class="collapse" id="collapse3">
-                        <p class="container w-75 w-sm-100">Mismas universidades? Distintas???
+                        <p class="container w-75 w-sm-100">
+                            Se deben formar equipos de 3-4 personas. Al menos dos tercios de los miembros del equipo
+                            deberan pertenecer a la misma universidad.
                         </p>
                     </div>
                 </aside>
@@ -227,10 +229,16 @@
             </div>
             <h3 class="my-5">PATROCINADORES ORO</h3>
             <article class="text-center row container">
-                <div class="container col-sm-12 col-md-6"><img class="w-75"
+                <div class="container col-6 col-md-3"><img class="w-75"
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
                 </div>
-                <div class="container col-sm-12 col-md-6 mt-5 mt-md-0 "><img class="w-75"
+                <div class="container col-6 col-md-3 "><img class="w-75"
+                        src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
+                </div>
+                <div class="container col-6 col-md-3 mt-5 mt-md-0"><img class="w-75"
+                        src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
+                </div>
+                <div class="container col-6 col-md-3 mt-5 mt-md-0 "><img class="w-75"
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
                 </div>
             </article>
@@ -240,10 +248,22 @@
 
             <h3 class="my-5">PATROCINADORES PLATA</h3>
             <article class="text-center row container ">
-                <div class="container col-sm-12 col-md-6"><img class="w-75"
+                <div class="container col-4  col-md-2 "><img class="w-75"
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
                 </div>
-                <div class="container col-sm-12 col-md-6 mt-5 mt-md-0"><img class="w-75"
+                <div class="container col-4 col-md-2 "><img class="w-75"
+                        src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
+                </div>
+                <div class="container col-4 col-md-2 "><img class="w-75"
+                        src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
+                </div>
+                <div class="container col-4   col-md-2 mt-5 mt-md-0"><img class="w-75"
+                        src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
+                </div>
+                <div class="container col-4 col-md-2 mt-5 mt-md-0"><img class="w-75"
+                        src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
+                </div>
+                <div class="container col-4 col-md-2 mt-5 mt-md-0"><img class="w-75"
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
                 </div>
             </article>
