--- a/changed.html
+++ b/changed.html
@@ -21,7 +21,7 @@
     <script defer src="//bootstrap-extension.com/bootstrap-extension-5.1.0/js/bootstrap-extension.min.js"></script>
 </head>
 
-<body style="padding-top:4.5rem">
+<body style="padding-top: 3.5rem;">
     <nav class="navbar navbar-expand-lg bg-danger  fixed-top">
         <div class="container-fluid ">
             <a class="collapsed menubut p-3 navbar-toggler border-0" data-bs-toggle="collapse"
@@ -33,48 +33,48 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
             </button> -->
-            <a class="navbar-brand text-white" href="#">CTF Universitario</a>
+            <a class="navbar-brand text-white title" href="#">CTF Universitario</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-white">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-white title">
                     <li class="nav-item ">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Inicio</a>
+                        <a class="nav-link active text-white title" aria-current="page" href="#">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#requisitos">Requisitos</a>
+                        <a class="nav-link text-white title" href="#requisitos">Requisitos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#ubicacion">Ubicacion</a>
+                        <a class="nav-link text-white title" href="#ubicacion">Ubicacion</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#patrocinadores">Patrocinadores</a>
+                        <a class="nav-link text-white title" href="#patrocinadores">Patrocinadores</a>
                     </li>
-                    <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
-                    </li> -->
                 </ul>
-                <!-- <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form> -->
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link text-white title" href="/login">Login / Register</a>
+                    </li>
+                </ul>
+
             </div>
         </div>
     </nav>
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/slides/041.webp" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/slides/042.webp" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/slides/043.webp" class="d-block w-100" alt="...">
+                </div>
+            </div>
+        </div>
+
+
     <section class="container text-center p-3">
-        <h2 class="my-3 dividered dividered-center dividered-danger">¿En qué consiste?</h2>
+        <h2 class="my-3 dividered dividered-center dividered-danger title">¿En qué consiste?</h2>
         <p class="px-5">El evento consistirá en una competición CTF de tipo jeopardy donde
             los
             equipos
@@ -122,7 +122,7 @@
         </div>
     </section>
     <section id="requisitos" class="container text-center my-5 p-3">
-        <h2 class="my-5 dividered dividered-center dividered-danger">Requisitos</h2>
+        <h2 class="my-5 dividered dividered-center dividered-danger title">Requisitos</h2>
         <article class="text-center row container">
 
             <div class="container col-md-7 col-sm-12 text-md-start text-sm-center">
@@ -190,7 +190,7 @@
         </article>
     </section>
     <section id="ubicacion" class="container text-center my-5 p-3">
-        <h2 class="my-5 dividered dividered-center dividered-danger">Ubicación</h2>
+        <h2 class="my-5 dividered dividered-center dividered-danger title">Ubicación</h2>
         <article class="text-center row container">
 
             <div class="container col-md-6 col-sm-12 m-md-0 ms-2" style="height:20rem">
@@ -213,9 +213,9 @@
     </section>
     <div class="patrocinadores">
         <section id="patrocinadores" class="text-center container patrocinadores py-5">
-            <h2 class="py-5 dividered dividered-center dividered-danger">Patrocinadores</h2>
+            <h2 class="py-5 dividered dividered-center dividered-danger title">Patrocinadores</h2>
 
-            <h3 class="my-5">PATROCINADORES PLATINO</h3>
+            <h3 class="my-5 title">PATROCINADORES PLATINO</h3>
             <article class="text-center row container">
                 <div class="container col-sm-12 col-md-6 "><img class="w-75"
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
@@ -227,7 +227,7 @@
             <div class="container w-75">
                 <div class="dotted py-5"></div>
             </div>
-            <h3 class="my-5">PATROCINADORES ORO</h3>
+            <h3 class="my-5 title">PATROCINADORES ORO</h3>
             <article class="text-center row container">
                 <div class="container col-6 col-md-3"><img class="w-75"
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
@@ -246,7 +246,7 @@
                 <div class="dotted py-5"></div>
             </div>
 
-            <h3 class="my-5">PATROCINADORES PLATA</h3>
+            <h3 class="my-5 title">PATROCINADORES PLATA</h3>
             <article class="text-center row container ">
                 <div class="container col-4  col-md-2 "><img class="w-75"
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
