--- a/changed.html
+++ b/changed.html
@@ -22,8 +22,8 @@
 </head>
 
 <body style="padding-top: 3.5rem;">
-    <nav class="navbar navbar-expand-lg bg-danger  fixed-top">
-        <div class="container-fluid ">
+    <nav id="nav" class="navbar navbar-expand-lg fixed-top px-md-5 px-0 border-bottom border-3 border-dark">
+        <div class="container-fluid px-md-5 px-1 text-md-left text-center border-bottom-5 border-dark">
             <a class="collapsed menubut p-3 navbar-toggler border-0" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" role="button" aria-expanded="false"
                 aria-controls="navbarSupportedContent">
@@ -36,44 +36,67 @@
             <a class="navbar-brand text-white title" href="#">CTF Universitario</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-white title">
-                    <li class="nav-item ">
-                        <a class="nav-link active text-white title" aria-current="page" href="#">Inicio</a>
+                    <!-- <li class="nav-item ">
+                        <a class="nav-link active text-white title" aria-current="page" href="#"></a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link text-white title " href="#requisitos">REQUISITOS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white title" href="#requisitos">Requisitos</a>
+                        <a class="nav-link text-white title " href="#ubicacion">UBICACIÓN</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white title" href="#ubicacion">Ubicacion</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white title" href="#patrocinadores">Patrocinadores</a>
+                        <a class="nav-link text-white title " href="#patrocinadores">PATROCINADORES</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-white title" href="/login">Login / Register</a>
+                        <a class="nav-link text-white title " href="/login">INSCRIPCIÓN</a>
                     </li>
                 </ul>
 
             </div>
         </div>
     </nav>
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/slides/041.webp" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/slides/042.webp" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/slides/043.webp" class="d-block w-100" alt="...">
-                </div>
+    <script>
+        const $ = (selector, context = document) =>
+            context.querySelector(selector)
+        if ((new URL(window.location.href)).host === "librelabucm.org") {
+            $("#nav").classList.add("bg-nav")
+            $()
+        } else {
+            $("#nav").classList.add("bg-danger")
+        }
+
+    </script>
+    <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://mdbcdn.b-cdn.net/img/new/slides/041.webp" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://mdbcdn.b-cdn.net/img/new/slides/042.webp" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://mdbcdn.b-cdn.net/img/new/slides/043.webp" class="d-block w-100" alt="...">
             </div>
         </div>
+    </div> -->
+    <div class="bg-black banner">
+        <div class=" container w-100 row text-center">
+            <div class="container col-12 col-xl-6 text-xl-start text-center align-middle d-inline  ">
+                <h1>Holaaaa</h1>
+                <h3>BOTTOM</h3>
+                <button class="btn bg-danger text-white rounded-0 mt-3">INSCRIBIRSE</button>
+            </div>
+            <div class=" container col-12 col-xl-6 text-center align-middle">
+                <img src="/seek.png" class=" p-0 p-md-5 text-center" alt="...">
+            </div>
+        </div>
+    </div>
 
 
-    <section class="container text-center p-3">
+    <section class="container text-center p-3 ">
         <h2 class="my-3 dividered dividered-center dividered-danger title">¿En qué consiste?</h2>
         <p class="px-5">El evento consistirá en una competición CTF de tipo jeopardy donde
             los
