--- a/changed.html
+++ b/changed.html
@@ -90,7 +90,7 @@
                 <button class="btn bg-danger text-white rounded-0 mt-3">INSCRIBIRSE</button>
             </div>
             <div class=" container col-12 col-xl-6 text-center align-middle">
-                <img src="/seek.png" class=" p-0 p-md-5 text-center" alt="...">
+                <img src="seek.png" class=" p-0 p-md-5 text-center" alt="...">
             </div>
         </div>
     </div>
